--- a/static/style.css
+++ b/static/style.css
@@ -6,9 +6,6 @@ h2              { font-size: 1.2em; }
 
 .page           { margin: 2em auto; width: 70em; border: 5px solid #ccc;
                   padding: 0.8em; background: white; }
-.entries        { list-style: none; margin: 0; padding: 0; }
-.entries li     { margin: 0.8em 1.2em; }
-.entries li h2  { margin-left: -1em; }
 .add-entry      { font-size: 0.9em; border-bottom: 1px solid #ccc; }
 .add-entry dl   { font-weight: bold; }
 .metanav        { text-align: right; font-size: 0.8em; padding: 0.3em;
@@ -17,6 +14,21 @@ h2              { font-size: 1.2em; }
                   border: 1px solid #aacbe2; }
 .error          { background: #f0d6d6; padding: 0.5em; }
 
+/* edit_details */
+.name_header {
+  margin-bottom: 2em;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+.details_display {
+  margin-bottom: 1em;
+}
+
+.category_header {
+  margin-bottom: 2em;
+  font-size: 1em;
+  font-weight: bold;
+}
 table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
